Fixes js file not loading on google pages

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         
     </style>
-    <script type="module" src="/game.js"></script>
+    <script type="module" src="game.js"></script>
 </head>
 <body class="center">
     <div class="game" id="game">
