--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
             color: var(--color, #333);
             text-shadow: 0 0.1em #fff;
         }
-
-        
     </style>
-    <script type="module" src="game.js"></script>
+    <script type="module">
+        import init from "./game/main.js";
+        init()
+    </script>
 </head>
 <body class="center">
     <div class="game" id="game">
